--- a/orchaRd.Rmd
+++ b/orchaRd.Rmd
@@ -1,12 +1,13 @@
 ---
-title: "orchaRd: An R package for drawing 'orchard' plots (and 'caterpillar' plots) from meta-analyses and meta-regressions with categorical moderators"
+title: "orchaRd: An R package for drawing 'orchard' plots (and 'caterpillars' plots) from meta-analyses and meta-regressions with categorical moderators"
 author: "S. Nakagawa, M. Lagisz, R. E. O’Dea, J. Rutkowska, Y. Yang, D.W.A. Noble, & A. M. Senior"
 date: "`r Sys.Date()`"
 geometry: margin=1.5cm
 fontsize: 10pt
 output: 
   bookdown::pdf_document2: default
-  bookdown::html_document2: default
+  bookdown::html_document2: 
+            toc: true
 ---
 
 ```{r setup, include = FALSE}
@@ -20,45 +21,38 @@ knitr::opts_chunk$set(
 
 # Introduction
 
-`orchaRd` allows users to create pretty orchard plots that contain both confidence intervals (CIs) and prediction intervals (PIs) around point estimates for different categorical moderators, plots the effect size distribution over top such estimates and weights effect sizes by their precision (1/standard error, SE) or sample size. `orchaRd` takes a `metafor` object of class `rma.mv` or `rma` (Viechtbauer, 2010) and plots the results for the meta-analytic or meta-regression model. Currently, only meta-regression models with a single moderator variable are allowed or intercept only meta-analytic models. `orchaRd` uses `ggplot2` (Wickham, 2009) for plotting, and as such, layers can be added directly to make plots customisable to the users needs. Also, the function `orchard_plot` uses the principles of bee swarm plots to visualise individual effect sizes (Elund 2012; also see Clarke & Sherrill-Mix 2012; Sherrill-Mix & Clarke 2012).
+`orchaRd` allows users to create pretty orchard plots that contain both confidence intervals (CIs) and prediction intervals (PIs) around point estimates for different categorical moderators, plots the effect size distribution over top such estimates and weights effect sizes by their precision (1/standard error, SE) or sample size. `orchaRd` takes a `metafor` object of class `rma.mv` or `rma` (Viechtbauer, 2010) and plots the results for the meta-analytic or meta-regression model. Currently, only meta-regression models with a single moderator variable are allowed or intercept only meta-analytic models. `orchaRd` uses `ggplot2` (Wickham, 2009) for plotting, and as such, layers can be added directly to make plots customisable to the users needs. Also, the function `orchard_plot` uses the principles of bee swarm plots to visualise individual effect sizes (Elund 2012; also see Clarke & Sherrill-Mix 2017; Sherrill-Mix & Clarke 2017).
 
-In addition to orchard plots, users can use the `caterpillars` function to draw caterpillar(s) plots. Furthermore, the package `orchaRd` comes with two functions that are useful for multilevel meta-analysis and meta-regression (i.e., `rma.mv`): 1) `i2_ml` to calculate the 'total' I^2^ along with I^2^ for each level (*sensu* Nakagawa & Santos 2012; see also ; Senior et al. 2016) and 2) `r2_ml` to calculate marginal and conditional R^2^ for mixed models (*sensu* Nakagawa & Schielzeth 2013). 
+In addition to orchard plots, users can use the `caterpillars` function to draw a caterpillars plot. We refer to this type of plot as a ‘caterpillars plot’ (rather than a ‘caterpillar plot’), because multiple caterpillars (groups) can be displayed on the same plot. Furthermore, the package `orchaRd` comes with two functions that are useful for multilevel meta-analysis and meta-regression (i.e., `rma.mv`): 1) `i2_ml` to calculate the 'total' I^2^ along with I^2^ for each level (*sensu* Nakagawa & Santos 2012; see also ; Senior et al. 2016) and 2) `r2_ml` to calculate marginal and conditional R^2^ for mixed models (*sensu* Nakagawa & Schielzeth 2013). 
 
 # Citing orchaRd
 
 To cite `orchaRd` in publications one can use the following reference:
 
-Nakagawa, S. et al. 2020. The Orchard Plot: Cutlivatinng the Forest Plot for Use in Ecology, Evolution and Beyond. *Research Synthesis Methods*, (revision) (*EcoEvoRxiv*: https://ecoevorxiv.org/epqa7/)
+Nakagawa, S., Lagisz, M., O’Dea,  R. E., Rutkowska, J., Yang, Y., Noble, D.W.A. & Senior, A. M. 2020. The Orchard Plot: Cultivating the Forest Plot for Use in Ecology, Evolution and Beyond. *Research Synthesis Methods*, (revision) (*EcoEvoRxiv*: https://ecoevorxiv.org/epqa7/)
 
 # Installation
 
 To install `orchaRd` use the following code in R:
 
-```{r echo = TRUE, eval = FALSE, results = 'hide', messages = FALSE, warnings = FALSE}
-install.packages("devtools")
-install.packages("tidyverse")
-install.packages("metafor")
-install.packages("patchwork")
-install.packages("R.rsp")
+```{r echo = TRUE, eval = TRUE, results = 'hide', messages = FALSE, warnings = FALSE}
+install.packages("pacman")
+pacman::p_load(devtools, tidyverse, metafor, patchwork, R.rsp)
+
+# Install orchaRd
 devtools::install_github("itchyshin/orchard_plot", subdir = "orchaRd", force = TRUE, build_vignettes = TRUE)
-```
-
-Installation will make the primary functions accessible to users along with their help files. You will also need the `tidyverse` and `metafor` packages.
-
-```{r echo = FALSE, eval = TRUE, results = 'hide'}
 library(orchaRd)
-library(patchwork)
-library(tidyverse)
-library(metafor)
 ```
 
-# Examples of orchard plots along with caterpillar plots
+Installation will make the primary functions accessible to users along with their help files. You will also need the `tidyverse` and `metafor` packages which the above code will load as well.
 
-In this vignette we'll walk the reader through a number of case studies and show you how you can create beautiful looking orchard plots. We overview three different case studies that make use of different effect sizes and moderators. The datasets associated with each case study come as part of the `orchaRd` package.
+# Examples of orchard and caterpillars plots
+
+In this vignette we'll walk the reader through a number of case studies and show you how you can create beautiful looking orchard caterpillars plots. We overview three different case studies that make use of different effect sizes and moderators. The datasets associated with each case study come as part of the `orchaRd` package.
 
 ## Example 1: Dietary Restriction and Lifespan
 
-English and Uller (2016) performed a systematic review and meta-analysis on the effects of early life dietary restriction (a reduction in a major component of the diet without malnutrition; e.g. caloric restriction) on average age at death, using the standardised mean difference (often called *d*). They found that, across the whole dataset, there was little evidence for an effect of dietary restriction on mean age at death. Here we'll use the dataset to first calculate the effect size measures and then fit an intercept only, meta-analytic model.
+English and Uller (2016) performed a systematic review and meta-analysis on the effects of early life dietary restriction (a reduction in a major component of the diet without malnutrition; e.g. caloric restriction) on average age at death, using the standardised mean difference (often called *d*). They found that, across the whole dataset, there was little evidence for an effect of dietary restriction on mean age at death. Here, we'll use the dataset to first calculate the effect size measures and then fit an intercept only meta-analytic model.
 
 ```{r echo = TRUE, eval = TRUE}
 
@@ -73,7 +67,7 @@ english_MA <- rma.mv(yi = SMD, V = vSMD, random = list( ~ 1 | StudyNo, ~ 1 | Eff
 summary(english_MA)
 ```
 
-We have fit a meta-analytic model and thus the only estimate we see is the overall effect size on the effects of caloric restriction on mean death across all studies examined. Now that we have fit our meta-analytic model we can get the confidence intervals and prediction intervals with a few functions in the `orchaRd` package. If one is interested in getting the table of results we can use the `mod_results` function. This will allow users to make nice tables of the results if needed. We can do that as follows:
+We have fit a meta-analytic model, and thus, the only estimate we see is the overall effect size on the effects of caloric restriction on mean death across all studies examined. Now that we have fit our meta-analytic model we can get the confidence intervals and prediction intervals with a few functions in the `orchaRd` package. If one is interested in getting the table of results we can use the `mod_results` function. This will allow users to make nice tables of the results if needed. We can do that as follows:
 
 ```{r echo = TRUE, eval = TRUE}
 
@@ -84,16 +78,16 @@ print(model_results)
 
 If we instead want to create an orchard plot and visualise the results we can do so quite simply as:
 
-```{r Figure1, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 4, fig.cap = "Orchard plot of the impact caloric restriction using standardised mean difference"}
+```{r Figure1, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 4, fig.cap = "Orchard plot of the impact caloric restriction on the average age at death using standardised mean difference"}
 orchard_plot(english_MA, mod="Int", xlab = "Standardised mean difference", 
   transfm = "none") 
 ```
 
-In Figure \@ref(fig:Figure1), we simply add in the metafor model and it will create a default orchard plot. Alternatively, we could also add in the table of results. Also. some people may wish to present the heterogeneity index, I^2^ and, at the same time, change the colours of the 'trunk and fruit' by adding a few arguments.
+In Figure \@ref(fig:Figure1), we simply add in the metafor model and it will create a default orchard plot. Alternatively, we could also add in the table of results. Also, some people may wish to present the heterogeneity index, I^2^, and at the same time, change the colours of the 'trunk and fruit' by adding a few arguments.
 
-```{r Figure2, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 4, fig.cap = "Orchard plot of the impact of caloric restriction using standardised mean difference but instead of using the metafor model, using the model results table", messages = FALSE, warnings = FALSE}
+```{r Figure2, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 4, fig.cap = "Orchard plot of the impact of caloric restriction on the average age at death using standardised mean difference instead using the model results table", messages = FALSE, warnings = FALSE}
 
-# use i2_sn function to obtain the total I^2
+# Use i2_ml function to obtain the total I^2 using the 'ns' method
 
 I2 <- i2_ml(english_MA)
 
@@ -103,21 +97,21 @@ orchard_plot(model_results, mod="Int", xlab = "Standardised mean difference") +
   scale_colour_manual(values="grey")
 ```
 
-Figure \@ref(fig:Figure2) and Figure \@ref(fig:Figure1) above show that overall estimate from a random-effects meta-analysis of 77 effect sizes is centered on zero, with a 95% CI that spans the line of no-effect. The prediction intervals clearly demonstrate the high level of heterogeneity (over 75%), with effects size less than -0.5 and greater than 0.5 predicted to be observed. 
+Figure \@ref(fig:Figure2) and Figure \@ref(fig:Figure1) above show that the overall estimate from a random-effects meta-analysis of 77 effect sizes is centered on zero, with a 95% CI that spans the line of no-effect. The prediction intervals clearly demonstrate the high level of heterogeneity (over 75%), with effects size less than -0.5 and greater than 0.5 predicted to be observed. 
 
 We can now draw a comparable caterpillar plot by using the function `caterpillars`.
 
-```{r Figure3, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 6, fig.cap = "Catterpilar plot of the impact of caloric restriction using standardised mean difference", messages = FALSE, warnings = FALSE}
+```{r Figure3, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 6, fig.cap = "Caterpillar plot of the impact of caloric restriction on the average age at death using standardised mean difference", messages = FALSE, warnings = FALSE}
 
 # a caterpillar plot (not a caterpillars plot)
 caterpillars(model_results, mod="Int", xlab = "Standardised mean difference") 
 ```
 
-It is now interesting to compare how the same data set can be visualised differently by looking at Figure \@ref(fig:Figure2) and Figure \@ref(fig:Figure3). The caterpillar plot can show CIs for each effect size. This is depicted in the orchard plot by the size of fruit when using precision.
+It is now interesting to compare how the same data set can be visualised differently by looking at Figure \@ref(fig:Figure2) and Figure \@ref(fig:Figure3). The caterpillar plot can show CIs for each effect size. This is depicted in the orchard plot by the size of fruit when using precision to adjust the size of each effect size.
 
-In a subsequent publication, Senior et al. (2017) analysed this dataset for effects of dietary-restriction on among-individual variation in the age at death using the log coefficient of variation ratio. A major prediction in both English & Uller (2016) and Senior et al. (2017) was that the type of manipulation, whether the study manipulated quality of food versus the quantity of food would be important. As such, we can fit a meta-regression model to test whether the moderator "Manipulation Type" (`ManipType`) impacts our results on the mean and variance
+In a subsequent publication, Senior et al. (2017) analysed this dataset for effects of dietary-restriction on among-individual variation in the age at death using the log coefficient of variation ratio. A major prediction in both English & Uller (2016) and Senior et al. (2017) was that the type of manipulation, whether the study manipulated quality of food versus the quantity of food would be important. As such, we can fit a meta-regression model to test whether the moderator "Manipulation Type" (`ManipType`) impacts our results on the mean and variance.
 
-```{r Figure4, fig.width = 6, fig.height = 8, fig.cap = "Orchard plot of diet qualities impact on SMD (Top panel) and log coefficient of variation (Bottom panel)"}
+```{r Figure4, fig.width = 6, fig.height = 8, fig.cap = "Orchard plot of diet qualities impact on average age at death using the SMD (Top panel) and log coefficient of variation (Bottom panel)"}
 # First we need to calculate the lnCVR
 english <- escalc(measure = "CVR", n1i = NStartControl, sd1i = SD_C, m1i = MeanC, 
                         n2i = NStartExpt, sd2i = SD_E, m2i = MeanE,
@@ -139,7 +133,7 @@ summary(english_MR)
 res2 <- mod_results(english_MR, mod = "ManipType")
 print(res2)
 
-# we fit a meta-regression (contrast) for the log coefficient of variation
+# We fit a meta-regression (contrast) for the log coefficient of variation
 senior_MR0 <- rma.mv(
   yi = lnCVR, V = vlnCVR, mods = ~ ManipType, random = list(~ 1 | StudyNo, ~ 1 | EffectID),
   data = english
@@ -153,7 +147,7 @@ senior_MR <- rma.mv(
 )
 summary(senior_MR)
 
-# creating a table of results
+# Creating a table of results
 res3 <- mod_results(senior_MR, "ManipType")
 print(res3)
 
@@ -170,9 +164,9 @@ p1 / p2
 
 Our orchard plot for the log coefficient of variation demonstrates that, while restrictions on dietary quality and quantity do not affect the average age at death (Top panel of Figure \@ref(fig:Figure4)), among-individual variation may be altered by quality restrictions (Bottom panel of Figure \@ref(fig:Figure4)). The effect is negative suggesting that the coefficient of variation in the control group is lower than that in the treatment group, and the 95% CI does not span zero. Again though, the effect is heterogeneous; a substantial number of positive effects are still predicted. 
 
-Let's draw comparable caterpillar plots to compare these two results again. 
+Let's draw a comparable caterpillars plot to compare these two results again. 
 
-```{r Figure5, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 8, fig.cap = "Caterpillar plot of diet qualities impact on the standardised mean difference (SMD) (Top Panel) and log coefficient of variation (lnCVR) (Bottom panel)", messages = FALSE, warnings = FALSE}
+```{r Figure5, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 8, fig.cap = "Caterpillar plot of diet qualities impact on the on average age at death using the standardised mean difference (SMD) (Top Panel) and log coefficient of variation (lnCVR) (Bottom panel)", messages = FALSE, warnings = FALSE}
 
 # We can now plot SMD and lnCVR beside each other and compare the results
 p1c <- caterpillars(english_MR, 
@@ -184,11 +178,11 @@ p2c <- caterpillars(senior_MR,
 p1c / p2c
 ```
 
-Now compare between Figure \@ref(fig:Figure4) and Figure \@ref(fig:Figure5). We think they both look nice. 
+Now compare between Figure \@ref(fig:Figure4) and Figure \@ref(fig:Figure5). We think they both look nice in this simple situation. 
 
 ## Example 2: Predation and Invertebrate Community 
 
-Eklof et al. (2012) evaluated the effects of predation on benthic invertebrate communities. Using the log response ratio they quantified differences in abundance and/or biomass of gastropods and amphipods in groups with and without predation in an experimental setting. 
+Eklof et al. (2012) evaluated the effects of predation on benthic invertebrate communities. Using the log response ratio, they quantified differences in abundance and/or biomass of gastropods and amphipods in groups with and without predation in an experimental setting. 
 
 Here again, we can create orchard plots of the model results, but we'll show how a few simple things can be modified. Again, we can fit the meta-analytic model first: 
 
@@ -201,8 +195,7 @@ eklof <- escalc(
   measure = "ROM", n1i = N_control, sd1i = SD_control, m1i = mean_control,
   n2i = N_treatment, sd2i = SD_treatment, m2i = mean_treatment,
   var.names = c("lnRR", "vlnRR"),
-  data = eklof
-)
+  data = eklof)
 
 # Add the observation level factor
 eklof$Datapoint <- as.factor(seq(1, dim(eklof)[1], 1))
@@ -210,25 +203,23 @@ eklof$Datapoint <- as.factor(seq(1, dim(eklof)[1], 1))
 # Also, we can get the sample size, which we can use for weighting if we would like
 eklof$N <- rowSums(eklof[, c("N_control", "N_treatment")])
 
-# fit a meta-regression with the intercept (contrast)
+# Fit a meta-regression with the intercept (contrast)
 eklof_MR0 <- rma.mv(
   yi = lnRR, V = vlnRR, mods = ~ Grazer.type, random = list(~ 1 | ExptID, ~ 1 | Datapoint),
-  data = eklof
-)
+  data = eklof)
 
 summary(eklof_MR0)
 
-# fit a meta-regression without the intercept and we can use this model for the orchard plot
+# Fit a meta-regression without the intercept and we can use this model for the orchard plot
 eklof_MR <- rma.mv(
   yi = lnRR, V = vlnRR, mods = ~ Grazer.type - 1, random = list(~ 1 | ExptID, ~ 1 | Datapoint),
-  data = eklof
-)
+  data = eklof)
 
 ```
 
-Above we have fit a meta-regression model using "Grazer Type" as a moderator which is predicted to explain variation in log response ratios. We can demonstrate a few simple changes users can make, but we note here that users can make far more complex changes down the line if needed, but we'll save explaining these more complex changes for the last example. The first is the angle at which the y-axis labels are positioned (bottom of Figure \@ref(fig:Figure6)):
+Above we have fit a meta-regression model using "Grazer Type" as a moderator which is predicted to explain variation in log response ratios. We can demonstrate a few simple changes users can make, but we note here that users can make far more complex changes down the line if needed. We'll save explaining these more complex changes for the last example. The first is the angle at which the y-axis labels are positioned (bottom of Figure \@ref(fig:Figure6)):
 
-```{r Figure6, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 8, fig.cap = "Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and bottom panel a plot containing changes in label axes"}
+```{r Figure6, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 8, fig.cap = "Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and the bottom panel a plot containing changes in label axes"}
 
 p3 <- orchard_plot(eklof_MR, mod = "Grazer.type", xlab = "log(Response ratio) (lnRR)", 
   transfm = "none") 
@@ -240,9 +231,9 @@ p3/p4
 
 ```
 
-The other thing we can change is the type of scaling we wish to use. Let's say we are interested in scaling the effect size by the total sample size of the study we use a vector of N, sample size (bottom of Figure \@ref(fig:Figure7)):
+The other thing that we can change is the type of scaling we wish to use. Let's say we are interested in scaling the effect size by the total sample size of the study. We can use a vector of N, sample size, to acheive this (bottom of Figure \@ref(fig:Figure7)):
 
-```{r Figure7, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and bottom panel a plot containing changes in label axes and scaling with sample size instead of precision"}
+```{r Figure7, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and the bottom panel a plot containing changes in label axes and scaling with sample size instead of precision"}
 
 p5 <- orchard_plot(eklof_MR, mod = "Grazer.type", xlab = "log(Response ratio) (lnRR)") 
 
@@ -253,9 +244,9 @@ p5/p6
 
 ```
 
-Overall, our orchard plot shows the results of a re-analysis of their data. The estimated mean effects are negative for both gastropods and amphipods suggesting that mean abundance/biomass in the control group is lower than in the treatment groups, although the effect is largest, and is statistically significant, for amphipods. In both cases the prediction intervals reveal the extent of heterogeneity, with positive effects predicted to be observed.
+Overall, our orchard plot shows the results of a re-analysis of their data. The estimated mean effects are negative for both gastropods and amphipods suggesting that mean abundance/biomass in the control group is lower than in the treatment groups, although the effect is largest (and is statistically significant) for amphipods. In both cases the prediction intervals reveal the extent of heterogeneity, with positive effects predicted to be observed.
 
-Again, we can also draw the caterpillar-plot counterparts for this dataset (\@ref(fig:Figure8)):
+Again, we can also draw the caterpillars-plot counterpart for this dataset (Figure \@ref(fig:Figure8)):
 
 ```{r Figure8, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 5, fig.height = 3, fig.cap = "Caterpillars plot of the effects of predation on benthic invertebrate communities compared using the log response ratio"}
 
@@ -269,7 +260,7 @@ Like last time, comparing between Figure \@ref(fig:Figure7) and Figure \@ref(fig
 
 Finally, we also look at the case discussed by Lim et al. (2014), who meta-analysed the strength of correlation between maternal and offspring size within-species, across a very wide range of taxa. They found, that typically, there is a moderate positive correlation between maternal size and offspring size within species (i.e. larger mothers have larger offspring). However, they also found evidence for relatively strong phylogenetic effects suggesting that the strength of the association is dependent on the evolutionary history of a lineage.
 
-Here we have used an orchard plot to represent the results obtained when meta-analysing the data from Lim et al. (2014) by taxonomic Phylum. 
+Here, we have used an orchard plot to represent the results obtained when meta-analysing the data from Lim et al. (2014) by taxonomic Phylum. 
 
 ```{r echo = TRUE, eval = TRUE}
 	data(lim)
@@ -277,13 +268,13 @@ Here we have used an orchard plot to represent the results obtained when meta-an
 # Add in the sampling variance
 	lim$vi<-(1/sqrt(lim$N - 3))^2
 
-# Lets fit a meta-regression - We will do Article non-independence. The phylogenetic model found phylogenetic effects, however, instead we could fit Phylum as a fixed effect and explore them with an Orchard Plot
+# Lets fit a meta-regression - We will use article ("Article") non-independence. The phylogenetic model found phylogenetic effects, however, instead we could fit Phylum as a fixed effect and explore them with an orchard plot
   lim_MR<-metafor::rma.mv(yi=yi, V=vi, mods=~Phylum-1, random=list(~1|Article, ~1|Datapoint), data=lim)
   summary(lim_MR)
   
 ```
 
-Now we can plot a default orchard plot, scaling each effect size by N. Also, because we are using Zr, we can use transfm = "tanh" and it will do the conversions for us back to the scale of raw correlation coefficients:
+Now we can plot a default orchard plot, scaling each effect size by N. Also, because we are using Zr, we can use transfm = "tanh" and it will do the conversions for us back to the raw correlation coefficient scale:
 
 ```{r Figure9, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
   
@@ -295,10 +286,10 @@ Now we can plot a default orchard plot, scaling each effect size by N. Also, bec
 Now that we have Figure \@ref(fig:Figure9), we can do some small changes to make it pretty and add some more detail, such as between study heterogeneity and R2 for phylum. Here we will just add R2 to the plot. Currently, the cb argument is "FALSE", we can change this to "TRUE" to use colour blind friendly colours. Additionally, because we are using `ggplot` we can add elements to the figure to make it look even prettier! 
 
 ```{r Figure10, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6.5, fig.height = 8, fig.cap = "Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
-  # Lets add the R2 on the figure as well as little modifications:
+  # Lets add the R2 on the figure as well as a few little modifications. First we need R2.
   R2 <- r2_ml(lim_MR)
 
-  # We can draw an orchard plot with R2
+  # We can now draw an orchard plot with R2
   orchard_plot(lim_MR, mod = "Phylum", xlab = "Correlation coefficient (r)", 
                alpha = 0.5, transfm = "tanh", angle = 45, N = lim$N, cb = TRUE) +
 
@@ -322,9 +313,9 @@ Now that we have Figure \@ref(fig:Figure9), we can do some small changes to make
         annotate(geom="text", x=-0.31, y=0.67, label="%",color="black", parse = FALSE, size = 4)
 ```
 
-In Figure \@ref(fig:Figure10), new elements can be added to the `orchard_plot` to modify it as one sees fit. It will overwrite existing elements. From our orchard plots above, it is clear that the analysis is dominated by data from Chordates and Arthropods, with the other Phyla being much more poorly represented. Second, there is a difference between the strength of a typical correlation within these two well represented groups (the correlation is stronger in Chordates), which arguably would explain the phylogenetic signals detected by Lim et al. (2014). Lastly, although there are differences within the typical correlation between Chordates and Arthropods, there remains a large overlap in predicted range of individual effect sizes; individual species within Phyla are still highly variable.
+In Figure \@ref(fig:Figure10), new elements can be added to the `orchard_plot` to modify it as one sees fit. It will overwrite existing elements. From our orchard plots above, it is clear that the analysis is dominated by data from Chordates and Arthropods, with the other Phyla being much more poorly represented. Second, there is a difference between the strength of a typical correlation within these two well represented groups (the correlation is stronger in Chordates), which arguably would explain the phylogenetic signals detected by Lim et al. (2014). Lastly, although there are differences within the typical correlation between Chordates and Arthropods, there remains a large overlap in the predicted range of individual effect sizes; individual species within Phyla are still highly variable.
 
-Finally, we make a comparable caterpillar plot.
+Finally, we make a comparable caterpillars plot.
 ```{r Figure11, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "Caterpillars plot of the the strength of correlation between maternal and offspring size within-species"}
   
   #Plot the meta-regression model
@@ -337,13 +328,14 @@ Compared to the orchard plot (Figure \@ref(fig:Figure10)), Figure \@ref(fig:Figu
 # References 
 
 Clarke E, Sherrill-Mix S. ggbeeswarm: categorical scatter (violin point) plots. 2017. *R package* version 0.6.0 
+
 Eklof J.S., Alsterberg C., Havenhand J.N., Sundback K., Wood H.L., Gamfeldt L. 2012. Experimental climate change weakens the insurance effect of biodiversity. *Ecology Letters*, 15:864-872.
 
 Eklund A. Beeswarm: the bee swarm plot, an alternative to stripchart. 2012. *R package* version 0.1. 
 
 English S, Uller T. 2016. Does early-life diet affect longevity? A meta-analysis across experimental studies. *Biology Letters*, 12: http://doi:10.1098/rsbl.2016.0291
 
-Lim J.N., Senior A.M., Nakagawa S. 2014. Heterogeneity in individual quality and reproductive trade-offs within species. *Evolution*. 68(8):2306-18. doi: 10.1111/evo.12446
+Lim J.N., Senior A.M., Nakagawa S. 2014. Heterogeneity in individual quality and reproductive trade-offs within species. *Evolution*. 68(8):2306-18. http://doi:10.1111/evo.12446
 
 Nakagawa, S, and Santos, E.S.A. 2012. Methodological issues and advances in biological meta-analysis. *Evolutionary Ecology* 26(5): 1253-1274.
 
